[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ilambk"
version = "0.1"
dependencies = [
    "ilamb","numpy","pandas","plotly","xarray","matplotlib","cartopy","importlib_resources"
]

[tools.setuptools.packages]
find = {}

[tool.setuptools.packages.find]
where = ["."]
include = ["ilambk"]

[tool.setuptools.package-data]
ilambk = ["*.sh"]


